--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "json-server": "^0.17.4",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-intl": "^4.3.4",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
