--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +24,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
+    "suneditor": "^2.47.7",
+    "suneditor-react": "^3.6.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
